fix: fixed overflow error and userlist fetching issue

--- a/src/styles/chatBox.module.scss
+++ b/src/styles/chatBox.module.scss
@@ -7,7 +7,10 @@
     align-items: flex-end;
     position: relative;
     overflow: hidden;
-    background-color: var(--tertiary-light);
+    // background-color: var(--tertiary-light);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     .chat-body {
         display: flex;
         flex-direction: row;
