--- a/src/styles/sendMessage.module.scss
+++ b/src/styles/sendMessage.module.scss
@@ -1,21 +1,21 @@
 .send-message {
     position: fixed;
     bottom: 0;
-    width: 100vw;
+    width: 76.85vw;
     height: 8vh;
     background-color: var(--primary-light);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 0.25rem var(--tertiary-grey);
+    box-shadow: 3px 0 0.25rem var(--tertiary-grey);
     padding-block: 0.5rem;
     overflow: hidden;
     z-index: 1500;
 }
 .send-message > input {
     height: auto;
-    width: 75vw;
+    width: 75%;
     border: none;
     padding: 0.5rem 1rem;
     background-color: white;
@@ -186,6 +186,12 @@
         border-radius: 5%;
         transform: rotate(90deg);
         background-position: 0 50%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .send-message {
+        width: 100%;
     }
 }
 
