--- a/src/styles/sidebar.module.scss
+++ b/src/styles/sidebar.module.scss
@@ -3,14 +3,15 @@
     top: 0;
     left: 0;
     width: 20vw;
-    height: 90%;
+    height: 100vh;
     padding: 0 20px;
     background: #fff;
-    box-shadow: -2px 0 24px rgb(0 0 0 / 6%);
     transition: width 0.4s;
     z-index: 100;
     padding-top: 4rem;
     overflow-y: scroll;
+    box-shadow: 0 0 0.25rem var(--tertiary-grey);
+    // box-shadow: -2px 0 24px rgb(0 0 0 / 6%);
     button {
         position: relative;
         display: flex;
@@ -306,5 +307,6 @@
     .sidebar {
         width: 0rem;
         padding: 0;
+        z-index: 2000;
     }
 }
